
EXTRA_DIST = \
	dgas_clean_wJobs.conf.template \
	dgas_hlr.conf.template \
	dgas_hlr.sql \
	dgas_hlr_tmp.sql \
	dgas-sumrecords2goc.conf.template \
	glite-dgas-hlrd
	

sysconf_DATA = \
	dgas_clean_wJobs.conf.template \
	dgas_hlr.conf.template \
	dgas_hlr.sql \
	dgas_hlr_tmp.sql \
	dgas-sumrecords2goc.conf.template

sbin_SCRIPTS = \
	glite-dgas-hlrd
